# task-specific-learning

./: LICENSE  Makefile  README.md  pyproject.toml
examples/: dldata.py
examples/Eg1/: E1_run.sh  E1_run_as.sh  E1_run_re.sh  README.md
examples/Eg1/code/: E1_as_gd.py  E1_as_mse.py  E1_as_tr.py  E1_gd.py  E1_ker.py  E1_mse.py  E1_re_mse.py  E1_tr.py
examples/Eg1/data/: E1_initial.npz
examples/Eg1/show/: E1_show.ipynb  fig.ipynb
examples/Eg1/weights/weights_as_mse/: E1_as_dr0.0_0_128wts.npz  E1_as_dr0.0_10_128wts.npz  E1_as_dr0.0_11_128wts.npz  E1_as_dr0.0_12_128wts.npz  E1_as_dr0.0_13_128wts.npz  E1_as_dr0.0_14_128wts.npz  E1_as_dr0.0_15_128wts.npz  E1_as_dr0.0_16_128wts.npz  E1_as_dr0.0_17_128wts.npz  E1_as_dr0.0_18_128wts.npz  E1_as_dr0.0_19_128wts.npz  E1_as_dr0.0_1_128wts.npz  E1_as_dr0.0_2_128wts.npz  E1_as_dr0.0_3_128wts.npz  E1_as_dr0.0_4_128wts.npz  E1_as_dr0.0_5_128wts.npz  E1_as_dr0.0_6_128wts.npz  E1_as_dr0.0_7_128wts.npz  E1_as_dr0.0_8_128wts.npz  E1_as_dr0.0_9_128wts.npz  E1_as_dr0.25_0_128wts.npz  E1_as_dr0.25_10_128wts.npz  E1_as_dr0.25_11_128wts.npz  (+77 more)
examples/Eg2/: E2_run.sh  README.md
examples/Eg2/code/: E2_gd.py  E2_ker.py  E2_mse.py  E2_tlb.py
examples/Eg2/data/: E2_ini0.npz
examples/Eg2/show/: E2_show_all.ipynb
examples/Eg3/: E3_run.sh  README.md
examples/Eg3/code/: E3_gd.py  E3_ker.py  E3_mep.py  E3_mse.py  E3_tr.py
examples/Eg3/data/: E3_gtstring.npz
examples/Eg3/show/: E3_show.ipynb
examples/fig/: Eg1-3.npz  Eg1-4.npz  Eg1.npz  Eg2.npz  Eg3.npz
taskspec/: method.py  model.py  utils.py  utils_1.py  utils_2.py  utils_3.py
(+1080 files in other folders)
