[tool.poetry]
name = "taskspec"
version = "0.1.0"
description = ""
authors = ["Qianxiao Li"]

[tool.poetry.dependencies]
python = ">3.9.0,<3.10.0"
hydra-core = "^1.1.1"
pdoc = "^14.1.0"
protobuf = "3.20.3"
tensorflow = "2.5.0"
scipy = "1.6"
matplotlib = "3.6"
tqdm = "4.66"
scikit-learn = "1.5.1"
seaborn = "0.12.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

